fix(theme/table): polish table styles to fix too narrow col case (#3317)

--- a/packages/core/src/theme/components/DocContent/doc.scss
+++ b/packages/core/src/theme/components/DocContent/doc.scss
@@ -177,30 +177,24 @@
     /* table */
     /* #region */
     &:where(.rp-table-scroll-container) {
+      margin: 1.5rem 0;
       overflow-x: auto;
+      overscroll-behavior-x: contain;
     }
+
     &:where(table) {
       width: 100%;
-
+      min-width: 100%;
       table-layout: auto;
       border-collapse: separate;
       border-spacing: 0;
-
       border: var(--rp-code-block-border);
       border-radius: var(--rp-radius);
       overflow: hidden;
+    }
 
-      &::-webkit-scrollbar {
-        height: 5px;
-        width: 5px;
-      }
-      &::-webkit-scrollbar-corner {
-        display: none;
-      }
-      &::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.05);
-        border-radius: 10px;
-      }
+    &:where(table:not(.rp-table-scroll-container > table)) {
+      margin: 1.5rem 0;
     }
 
     /* thead */
@@ -210,7 +204,8 @@
     }
 
     &:where(th) {
-      padding: 0.75rem 1.25rem;
+      min-width: 8rem;
+      padding: 0.75rem 1rem;
       font-weight: 600;
       font-size: 0.875rem;
       text-align: left;
@@ -224,14 +219,15 @@
     }
 
     &:where(td) {
-      padding: 0.75rem 1.25rem;
+      min-width: 8rem;
+      padding: 0.75rem 1rem;
       border-bottom: 1px solid var(--rp-c-divider-light);
-
       font-size: 0.875rem;
+      color: var(--rp-c-text-1);
     }
 
-    &:where(tr) {
-      transition: background-color 0.2s ease;
+    &:where(tbody tr) {
+      transition: background-color 0.2s ease-out;
 
       &:hover {
         background: var(--rp-c-bg-soft);
@@ -279,29 +275,6 @@
       &:hover {
         background-color: var(--rp-c-bg-mute);
       }
-    }
-  }
-}
-
-/* Dark mode styles */
-:where(.rp-dark) .rp-doc {
-  :not(:where(.rp-not-doc, .rp-not-doc *)) {
-    /* table */
-    /* #region */
-    &:where(table) {
-      border-color: var(--rp-c-divider);
-    }
-
-    &:where(table tr) {
-      border-color: var(--rp-c-divider);
-    }
-
-    &:where(table td) {
-      border-color: var(--rp-c-divider);
-    }
-
-    &:where(table th) {
-      border-color: var(--rp-c-divider);
     }
   }
 }
